changed image format

--- a/downloads.html
+++ b/downloads.html
@@ -189,7 +189,7 @@
 <div class="container-fluid">
   <div class="row hidden-xs hidden-sm" style="padding-top: 100px;">
     <div class="col-xs-6">
-	  <a style="float: right" href="https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/"><img src="mended3d.png" style="max-width:600px;max-height:600px;"/></a>
+	  <a style="float: right" href="https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/"><img src="mended3d.jpg" style="max-width:600px;max-height:600px;"/></a>
 	</div>
 	<div class="col-xs-6" style="height: 600px">
 	  <div style="height: 180px"></div>
@@ -198,7 +198,7 @@
 	</div>
   </div>
   <div class="row visible-xs visible-sm" style="padding-top: 100px;">
-    <div><a href="https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/"><img src="mended3d.png" style="max-width:600px;max-height:600px;margin: auto; display: block;"/></a></div>
+    <div><a href="https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/"><img src="mended3d.jpg" style="max-width:600px;max-height:600px;margin: auto; display: block;"/></a></div>
 	<div style="text-align: center"><a style="color: #931111; font-size: 3em;" href="sneakpeek.pdf">Click to <span style="text-decoration: underline"><b>download</b></span><br>your FREE sneak<br>peak of Mended</a></div>
     <div style="padding-top: 40px;"><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Get on Amazon</button></div>
   </div>
