--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <div id="section1" class="container-fluid">
    <div class="row">
      <div class="col-xs-12 hidden-xs clearpad">
-       <img src="163184895_5.png" id="bg" class="center-block img-responsive">
+       <img src="163184895_5.jpg" id="bg" class="center-block img-responsive">
        <div class="caption" style="font-family: Linot Didot, serif;">
          <h1 style="font-size: 10vw;"><b><i>Kayla Marie</i></b></h1>
 	     </br>
@@ -200,7 +200,7 @@
        </div>
 	 </div>
 	 <div class="col-xs-12 visible-xs clearpad">
-       <img src="163184895_5.png" id="bg" class="center-block img-responsive" style="min-height: 500px">
+       <img src="163184895_5.jpg" id="bg" class="center-block img-responsive" style="min-height: 500px">
        <div class="caption" style="font-family: Linot Didot, serif;">
          <h1 style="font-size: 5em;"><b><i>Kayla Marie</i></b></h1>
 	     </br>
