spelling mistake: peek

--- a/index.html
+++ b/index.html
@@ -279,12 +279,12 @@
 	</div>
 	<div class="col-xs-3 hidden-xs hidden-sm" style="min-width: 350px">
 	  <div><img src="booklarge.png" style="margin: auto; display: block; padding-bottom: 20px;"/></div>
-	  <div style="padding-bottom: 20px"><button type="button" class="btn btn-xlarge-trial btn-primary visible-md" style="margin: auto; display: block;" onclick="window.location='./sneakpeek.pdf'">FREE Sneak Peak</button></div>
+	  <div style="padding-bottom: 20px"><button type="button" class="btn btn-xlarge-trial btn-primary visible-md" style="margin: auto; display: block;" onclick="window.location='./sneakpeek.pdf'">FREE Sneak Peek</button></div>
 	  <div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Get on Amazon</button></div>
 	</div>
 	<div class="col-xs-12 visible-xs visible-sm" style="padding-bottom: 60px">
 	  <div><img src="booklarge.png" style="margin: auto; display: block; padding-bottom: 20px;"/></div>
-	  <div style="padding-bottom: 20px"><button type="button" class="btn btn-xlarge-trial btn-primary" style="margin: auto; display: block;" onclick="window.location='./sneakpeek.pdf'">FREE Sneak Peak</button></div>
+	  <div style="padding-bottom: 20px"><button type="button" class="btn btn-xlarge-trial btn-primary" style="margin: auto; display: block;" onclick="window.location='./sneakpeek.pdf'">FREE Sneak Peek</button></div>
 	  <div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Get on Amazon</button></div>
 	</div>
 	<div class="col-xs-5 hidden-xs hidden-sm">
@@ -294,7 +294,7 @@
 		   <span style="color: #777777; font-size:1.3em;">Sweet Home Dixie Book one</span>
 	    </div>
 		<div class="col-xs-6 clearpad hidden-md">
-		  <div style="float: left; margin-top: 20px"><button type="button" class="btn btn-xlarge-trial btn-primary" style="margin: auto; display: block;" onclick="window.location='./sneakpeek.pdf'">Download a FREE Sneak Peak</button></div>
+		  <div style="float: left; margin-top: 20px"><button type="button" class="btn btn-xlarge-trial btn-primary" style="margin: auto; display: block;" onclick="window.location='./sneakpeek.pdf'">Download a FREE Sneak Peek</button></div>
 	    </div>
 	  </div>
 	  <div style="color: black; font-size:1.3em;">
@@ -489,6 +489,11 @@
   </div>
   <div class="row">
      <div style="padding-top: 60px"></div>
+  </div>
+  <div class="row">
+    <div style="margin: auto; text-align: center; font-size: 2em; padding-bottom: 60px;">
+	  <a href="https://loveandwriting.blogspot.com/" style="color: white">For more posts Click Here</a>
+	</div>
   </div>
 </div>
 
