change button text and change the underlined word to here

--- a/downloads.html
+++ b/downloads.html
@@ -193,14 +193,14 @@
 	</div>
 	<div class="col-xs-6" style="height: 600px">
 	  <div style="height: 180px"></div>
-	  <a style="color: #931111; font-size: 3em" href="sneakpeek.pdf">Click to <span style="text-decoration: underline"><b>download</b></span><br>your FREE sneak<br>peek of Mended</a>
-	  <div style="padding-top: 40px; padding-left: 60px;"><button type="button" class="btn btn-xlarge btn-primary" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Get on Amazon</button></div>
+	  <a style="color: #931111; font-size: 3em" href="sneakpeek.pdf">Click <span style="text-decoration: underline"><b>here</b></span> to download<br>your FREE sneak<br>peek of Mended</a>
+	  <div style="padding-top: 40px; padding-left: 60px;"><button type="button" class="btn btn-xlarge btn-primary" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Buy on Amazon</button></div>
 	</div>
   </div>
   <div class="row visible-xs visible-sm" style="padding-top: 100px;">
     <div><a href="https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/"><img src="mended3d.jpg" style="max-width:600px;max-height:600px;margin: auto; display: block;"/></a></div>
-	<div style="text-align: center"><a style="color: #931111; font-size: 3em;" href="sneakpeek.pdf">Click to <span style="text-decoration: underline"><b>download</b></span><br>your FREE sneak<br>peek of Mended</a></div>
-    <div style="padding-top: 40px;"><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Get on Amazon</button></div>
+	<div style="text-align: center"><a style="color: #931111; font-size: 3em;" href="sneakpeek.pdf">Click <span style="text-decoration: underline"><b>here</b></span> to download<br>your FREE sneak<br>peek of Mended</a></div>
+    <div style="padding-top: 40px;"><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Buy on Amazon</button></div>
   </div>
   <div class="row" style="padding-top: 100px;">    
     <div style="text-align: center; font-size: 3em">Thanks for visiting!</div>	
