--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
   
   <style>
   @font-face {
@@ -159,6 +160,13 @@
 	  margin-top: 0px;
 	  padding-top: 0px;
    }
+   
+   @media (max-width:768px){
+     #mc_embed_signup .clear {clear:none; display:block !important;}
+   }
+   #mc_embed_signup{background:#fff; font:14px Helvetica,Arial,sans-serif; }
+   /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	  We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
   </style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -215,7 +223,7 @@
     <div class="col-xs-12 visible-xs visible-sm"> 
 	  <div style="padding-bottom: 60px;">
         <div><img src="bookmedium.png" style="margin: auto; display: block; padding-bottom: 20px"/></div>
-	    <div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Get it Now</button></div>
+	    <div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/B01N7FP9MH/'">Get it Now</button></div>
 	  </div>
     </div>	
 	<div class="col-xs-1 hidden-xs hidden-sm">
@@ -223,7 +231,7 @@
 	<div class="col-xs-5 hidden-xs hidden-sm">
 	  <div style="float: right; padding-right: 8%; padding-bottom: 60px">
         <div><img src="bookmedium.png" style="margin: auto; display: block; padding-bottom: 20px;"/></div>
-	    <div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Get it Now</button></div>
+	    <div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/B01N7FP9MH/'">Get it Now</button></div>
 	  </div>
     </div>
 	<div class="col-xs-5 hidden-xs hidden-sm">
@@ -246,9 +254,9 @@
     <div class="col-xs-10">
     <div style="color: black; margin: auto; display: block; font-size:2em; text-align: justify; text-justify: inter-word; max-width: 1000px">
 	  <div style="text-align: center"><b>Welcome and thank you for taking the time to visit my webpage!</b></div><br> 
-      Here you will find everything you need to know about me and my work as a writer of contemporary romance. My first finished novel is a beautiful love story called <a href="https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/">Mended</a>; a heartfelt story about tragedy and the incredible ability of love to mend even the deepest of wounds. I hope you will enjoy reading it as much as I enjoyed writing it.<br><br> 
+      Here you will find everything you need to know about me and my work as a writer of contemporary romance. My first finished novel is a beautiful love story called <a href="https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/B01N7FP9MH/">Mended</a>; a heartfelt story about tragedy and the incredible ability of love to mend even the deepest of wounds. I hope you will enjoy reading it as much as I enjoyed writing it.<br><br> 
 	  
-      <div class="clearpad hidden-xs">You can find out more information about <a href="https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/">Mended</a> and download it on my <a href="#section2">books</a> page. I hope that you will take the time to explore my website and get to know me and my work.<br><br> 
+      <div class="clearpad hidden-xs">You can find out more information about <a href="https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/B01N7FP9MH/">Mended</a> and download it on my <a href="#section2">books</a> page. I hope that you will take the time to explore my website and get to know me and my work.<br><br> 
       Check out my <a href="#section3">Writing Diary</a> for sample chapters, excerpts, bonus material, and more!<br><br> 
       I'd love to hear from you, so please check out my <a href="#section4">contact</a> page for ways to reach me. Your comments, opinions, and feedback are always appreciated! Check back often for updates and information about my upcoming works.<br><br></div>
       <div style="text-align: center"><b>Thank you for visiting!</b></div><br>
@@ -280,12 +288,12 @@
 	<div class="col-xs-3 hidden-xs hidden-sm" style="min-width: 350px">
 	  <div><img src="booklarge.png" style="margin: auto; display: block; padding-bottom: 20px;"/></div>
 	  <div style="padding-bottom: 20px"><button type="button" class="btn btn-xlarge-trial btn-primary visible-md" style="margin: auto; display: block;" onclick="window.location='./sneakpeek.pdf'">FREE Sneak Peek</button></div>
-	  <div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Get on Amazon</button></div>
+	  <div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/B01N7FP9MH/'">Get on Amazon</button></div>
 	</div>
 	<div class="col-xs-12 visible-xs visible-sm" style="padding-bottom: 60px">
 	  <div><img src="booklarge.png" style="margin: auto; display: block; padding-bottom: 20px;"/></div>
 	  <div style="padding-bottom: 20px"><button type="button" class="btn btn-xlarge-trial btn-primary" style="margin: auto; display: block;" onclick="window.location='./sneakpeek.pdf'">FREE Sneak Peek</button></div>
-	  <div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Get on Amazon</button></div>
+	  <div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/B01N7FP9MH/'">Get on Amazon</button></div>
 	</div>
 	<div class="col-xs-5 hidden-xs hidden-sm">
 	  <div class="row">
@@ -515,15 +523,46 @@
     <div style="margin: auto; color: black; text-align: center; padding-top: 20px; padding-bottom: 60px">
 	   <a href="https://www.facebook.com/kaylamariebooks/" style="padding-right: 20px"><i class="fa fa-facebook fa-2x"></i></a>
 	   <a href="https://twitter.com/kaylamariebooks" style="padding-right: 20px"><i class="fa fa-twitter fa-2x"></i></a>
-	   <!--<a href="www.google.com" style="padding-right: 20px"><i class="fa fa-google-plus fa-2x"></i></a>-->
-	   <a href="https://www.linkedin.com/in/kayla-marie-130b3a11b/"><i class="fa fa-linkedin fa-2x"></i></a>
+	   <a href="https://plus.google.com/104120555099191348441" style="padding-right: 20px"><i class="fa fa-google-plus fa-2x"></i></a>
+	   <a href="https://www.linkedin.com/in/kayla-marie-130b3a11b/" style="padding-right: 20px"><i class="fa fa-linkedin fa-2x"></i></a>
+	   <a href="https://www.instagram.com/kaylamarie_author/"><i class="fa fa-instagram fa-2x"></i></a>
 	</div>
   </div>
+  <div class="row">
+    <div class="col-xs-3">
+	</div>
+    <div class="col-xs-6">
+      <div id="mc_embed_signup" style="margin: auto; color: black; text-align: center; padding-top: 60px; padding-bottom: 60px">
+	    <span style="color: #337ab7; text-align: center; font-size: 2em;">Subscribe to my Newsletter</span>
+        <form action="https://kaylamariebooks.us14.list-manage.com/subscribe/post?u=182eba74522c5f5cc6f02235b&amp;id=5da4b4408a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll">	
+            <div class="mc-field-group">
+	          <label for="mce-EMAIL">Email Address </label>
+	          <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+            </div>
+	        <div id="mce-responses" class="clear">
+		      <div class="response" id="mce-error-response" style="display:none">
+			  </div>
+		      <div class="response" id="mce-success-response" style="display:none">
+			  </div>
+	        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_182eba74522c5f5cc6f02235b_5da4b4408a" tabindex="-1" value="">
+			</div>
+            <div class="clear">
+			  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-xlarge btn-primary" style="margin-left: 0px">
+			</div>
+          </div>
+        </form>
+      </div> 
+    </div>	    
+  </div>  
 </div>
 
 <script src="https://use.fontawesome.com/02bb8c11f2.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+<script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 
 </body>
 </html>
