added images for stars and new quptes

--- a/index.html
+++ b/index.html
@@ -237,12 +237,13 @@
 	<div class="col-xs-5 hidden-xs hidden-sm">
 	  <div style="padding-top: 5%; max-width: 400px">
 	    <div style="color: black; font-size: 1.7em; padding-left: 8%;">
-	      <i>“Mended is a profoundly moving story of loss, love, and hope. Kayla Marie has a rare talent: she has given us a beautifully crafted story rich with believable and authentic characters, intrigue, and raw emotion.”</i>
+	      <i>“Mended is a gem of a debut novel by Kayla Marie. This talented romance author excels at developing believable and compelling characters, complete with delicious flaws, challenges and conflicts. I anxiously await the next book in the series!.”</i>
           <br/><br/>         
 	    </div>
-	    <div style="color: black; text-align: right; font-size: 1.7em; padding-right: 25px">
-	      -Nicole, NJ
+	    <div style="color: black; text-align: left; font-size: 1.7em; padding-left: 25px">
+	      - Stephanie Collins<br><span style="padding-left: 15px"># 1 Amazon Best-Selling Author</span>
 	    </div>
+		<div style="text-align: left; padding-left: 35px"><img src="stars2.jpg"/></div>
 	  </div>
 	</div>
 	<div class="col-xs-1 hidden-xs hidden-sm">
@@ -335,6 +336,7 @@
 	  <div style="padding-top: 23px; padding-bottom: 20px; margin-left: 90px"><i>Mended is a profoundly moving story of loss, love, and hope. Kayla Marie has a rare talent: she has given us a beautifully crafted story rich with believable and authentic characters, intrigue, and raw emotion.</i></div>
 	  <div style="text-align: right; color: #8892a1;  font-size: 1.2em;">Nicole</div>
 	  <div style="text-align: right; color: #8892a1;"><i>New Jersey</i></div>
+	  <div style="text-align: right;"><img src="stars.jpg"/></div>
     </div>
     </div>
   </div>
@@ -346,6 +348,7 @@
 	  <div style="padding-top: 23px; padding-bottom: 20px; margin-left: 90px"><i>Mended is a touching romance novel that I really got into, the book is very well written and the ending is so emotional! I'm recommending it to all my family and friends.</i></div>
 	  <div style="text-align: right; color: #8892a1;  font-size: 1.2em;">Justin</div>
 	  <div style="text-align: right; color: #8892a1;"><i>California</i></div>
+	  <div style="text-align: right;"><img src="stars.jpg"/></div>
     </div>
     </div>
   </div>
@@ -357,6 +360,43 @@
 	  <div style="padding-top: 23px; padding-bottom: 20px; margin-left: 90px"><i>Mended is a captivating story about a single mom who goes to great lengths to save her son from a devastating future. What she encounters during the process is heartwarming. It's real page turner. I can't wait to read the next book in the series.</i></div>
 	  <div style="text-align: right; color: #8892a1;  font-size: 1.2em;">Karie</div>
 	  <div style="text-align: right; color: #8892a1;"><i>California</i></div>
+	  <div style="text-align: right;"><img src="stars.jpg"/></div>
+    </div>
+    </div>
+  </div>
+  
+  <div class="row">
+	<div style="margin: auto; width: 50%; min-width: 500px; overflow: visible; padding-bottom: 40px">
+	<div class="clearpad" style="color: #3e434a; text-align: justify; text-justify: inter-word; padding-right: 90px">
+	  <div style="float: left; padding-right: 10px"><img src="quotes.png"/></div>
+	  <div style="padding-top: 23px; padding-bottom: 20px; margin-left: 90px"><i>Mended is a gem of a debut novel by Kayla Marie. This talented romance author excels at developing believable and compelling characters, complete with delicious flaws, challenges and conflicts. I anxiously await the next book in the series!</i></div>
+	  <div style="text-align: right; color: #8892a1;  font-size: 1.2em;">Stephanie Collins</div>
+	  <div style="text-align: right; color: #8892a1;"><i># 1 Amazon Best-Selling Author</i></div>
+	  <div style="text-align: right;"><img src="stars.jpg"/></div>
+    </div>
+    </div>
+  </div>
+  
+  <div class="row">
+	<div style="margin: auto; width: 50%; min-width: 500px; overflow: visible; padding-bottom: 40px">
+	<div class="clearpad" style="color: #3e434a; text-align: justify; text-justify: inter-word; padding-right: 90px">
+	  <div style="float: left; padding-right: 10px"><img src="quotes.png"/></div>
+	  <div style="padding-top: 23px; padding-bottom: 20px; margin-left: 90px"><i>Kayla Marie definitely has what it takes to follow her passion for writing. Mended is a well-crafted tale of heartbreak and joy, of dark paths and bright futures, with strong characters and a solid story. It’s much more than a “romance;” it’s a story that shows there’s hope in every shattered situation in life—and often times—great things can arise out of the shards.</i></div>
+	  <div style="text-align: right; color: #8892a1;  font-size: 1.2em;">Michelle</div>
+	  <div style="text-align: right; color: #8892a1;"><i>California</i></div>
+	  <div style="text-align: right;"><img src="stars.jpg"/></div>
+    </div>
+    </div>
+  </div>
+  
+  <div class="row">
+	<div style="margin: auto; width: 50%; min-width: 500px; overflow: visible; padding-bottom: 40px">
+	<div class="clearpad" style="color: #3e434a; text-align: justify; text-justify: inter-word; padding-right: 90px">
+	  <div style="float: left; padding-right: 10px"><img src="quotes.png"/></div>
+	  <div style="padding-top: 23px; padding-bottom: 20px; margin-left: 90px"><i>Kayla Marie triumphs as a first time author in this moving and captivating story.</i></div>
+	  <div style="text-align: right; color: #8892a1;  font-size: 1.2em;">Brenda</div>
+	  <div style="text-align: right; color: #8892a1;"><i>California</i></div>
+	  <div style="text-align: right;"><img src="stars.jpg"/></div>
     </div>
     </div>
   </div>
@@ -516,24 +556,16 @@
   </div>
   <div class="row">
     <div style="margin: auto; color: #777777; text-align: center; font-size: 2em; padding-bottom: 20px;">
-	  I'd love to hear from you!
+	  Don't miss out on important news and contests
 	</div>
   </div>
-  <div class="row">
-    <div style="margin: auto; color: black; text-align: center; padding-top: 20px; padding-bottom: 60px">
-	   <a href="https://www.facebook.com/kaylamariebooks/" style="padding-right: 20px"><i class="fa fa-facebook fa-2x"></i></a>
-	   <a href="https://twitter.com/kaylamariebooks" style="padding-right: 20px"><i class="fa fa-twitter fa-2x"></i></a>
-	   <a href="https://plus.google.com/104120555099191348441" style="padding-right: 20px"><i class="fa fa-google-plus fa-2x"></i></a>
-	   <a href="https://www.linkedin.com/in/kayla-marie-130b3a11b/" style="padding-right: 20px"><i class="fa fa-linkedin fa-2x"></i></a>
-	   <a href="https://www.instagram.com/kaylamarie_author/"><i class="fa fa-instagram fa-2x"></i></a>
-	</div>
-  </div>
+  
   <div class="row">
     <div class="col-xs-3">
 	</div>
     <div class="col-xs-6">
       <div id="mc_embed_signup" style="margin: auto; color: black; text-align: center; padding-top: 60px; padding-bottom: 60px">
-	    <span style="color: #337ab7; text-align: center; font-size: 2em;">Subscribe to my Newsletter</span>
+	    <span style="color: #337ab7; text-align: center; font-size: 3em;">Subscribe to my Newsletter</span>
         <form action="https://kaylamariebooks.us14.list-manage.com/subscribe/post?u=182eba74522c5f5cc6f02235b&amp;id=5da4b4408a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">	
             <div class="mc-field-group">
@@ -555,7 +587,29 @@
         </form>
       </div> 
     </div>	    
-  </div>  
+  </div>
+  
+  <div class="row">
+    <div style="margin: auto; color: #777777; text-align: center; padding-top: 20px; font-size: 2em">
+	   <b>I'd love to hear from you!</b>
+	</div>
+  </div>
+  
+  <div class="row">
+    <div style="margin: auto; color: black; text-align: center; padding-top: 20px;">
+	   <a href="mailto:kaylamariebooks@gmail.com" target="_top" style="font-size: 2em;">kaylamariebooks@gmail.com</a>
+	</div>
+  </div>
+  
+  <div class="row">
+    <div style="margin: auto; color: black; text-align: center; padding-top: 20px; padding-bottom: 60px">	   
+	   <a href="https://www.facebook.com/kaylamariebooks/" style="padding-right: 20px"><i class="fa fa-facebook fa-2x"></i></a>
+	   <a href="https://twitter.com/kaylamariebooks" style="padding-right: 20px"><i class="fa fa-twitter fa-2x"></i></a>
+	   <a href="https://plus.google.com/104120555099191348441" style="padding-right: 20px"><i class="fa fa-google-plus fa-2x"></i></a>
+	   <a href="https://www.linkedin.com/in/kayla-marie-130b3a11b/" style="padding-right: 20px"><i class="fa fa-linkedin fa-2x"></i></a>
+	   <a href="https://www.instagram.com/kaylamarie_author/"><i class="fa fa-instagram fa-2x"></i></a>
+	</div>
+  </div>
 </div>
 
 <script src="https://use.fontawesome.com/02bb8c11f2.js"></script>
