added link for amazon reviews

--- a/index.html
+++ b/index.html
@@ -400,6 +400,15 @@
     </div>
     </div>
   </div>
+  
+  <div class="row">
+	<div style="margin: auto; width: 50%; min-width: 500px; overflow: visible; padding-bottom: 40px">
+	<div style="color: #3e434a; text-align: center;">
+	  <a href="https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/B01N7FP9MH/" style="font-size: 2em">Read more reviews on Amazon</a>
+    </div>
+    </div>
+  </div>
+  
 </div>
 
 <div id="section3" class="container-fluid">
