added special offer under email list

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
     <div class="col-xs-3">
 	</div>
     <div class="col-xs-6">
-      <div id="mc_embed_signup" style="margin: auto; color: black; text-align: center; padding-top: 60px; padding-bottom: 60px">
+      <div id="mc_embed_signup" style="margin: auto; color: black; text-align: center; padding-top: 60px;">
 	    <span style="color: #337ab7; text-align: center; font-size: 3em;">Subscribe to my Newsletter</span>
         <form action="https://kaylamariebooks.us14.list-manage.com/subscribe/post?u=182eba74522c5f5cc6f02235b&amp;id=5da4b4408a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">	
@@ -598,8 +598,33 @@
     </div>	    
   </div>
   
+  <div class="row" style="padding-top: 40px">
+    <div class="col-xs-3">
+	</div>
+	<div class="col-xs-6">
+	  <div class="row">
+	    <div class="col-xs-12 visible-xs visible-sm">
+	      <div style="color: black; text-align: center;"><span style="font-size: 2em; color: #931111"><b>Subscribe now and get the first 21 chapters of Mended for FREE</b></span><br><br>
+		  </div>
+	    </div>
+	  </div>
+	  <div class="row" style="min-width: 700px">
+	  <div class="col-xs-5 hidden-xs hidden-sm">
+	    <div style="margin: auto;"><img src="bookmedium.png"/></div>
+	  </div>
+	  <div class="col-xs-7 hidden-xs hidden-sm">
+	    <div style="color: black; text-align: center;"><span style="font-size: 2.5em; color: #931111"><b>Subscribe now and get the first 21 chapters of Mended for FREE</b></span><br><br>
+<span style="color: #931111; font-size: 1.5em">That's more than 150 pages of 100% FREE content!</span><br><br>
+<span style="color: #777777; font-size: 1.5em">This offer is only valid for a limited time! </div>
+	  </div>	  
+      </div>	  
+	</div>
+	<div class="col-xs-3">
+	</div>    
+  </div>
+  
   <div class="row">
-    <div style="margin: auto; color: #777777; text-align: center; padding-top: 20px; font-size: 2em">
+    <div style="margin: auto; color: #777777; text-align: center; padding-top: 40px; font-size: 2em">
 	   <b>I'd love to hear from you!</b>
 	</div>
   </div>
