--- a/specialoffer.html
+++ b/specialoffer.html
@@ -189,35 +189,35 @@
 
 <div class="container-fluid">
 
-  <div class="row" style="padding-top: 120px; padding-bottom: 20px">
-    <div class="col-xs-12 hidden-xs hidden-sm">  
-       <div style="text-align: center; font-size: 3vw; color: #0e1b33">An Exclusive Offer for Newsletter Subscribers</div>	
+  <div class="row" style="padding-top: 120px;">    
+    <div class="col-xs-12 visible-xs visible-sm" >  
 	</div>
 	<div class="col-xs-12 visible-xs visible-sm">  
-       <div style="text-align: center; font-size: 3em; color: #0e1b33">An Exclusive Offer for Newsletter Subscribers</div>	
+       <div style="text-align: center; font-size: 2em; color: #0f4680; padding-bottom: 60px">Subscribe to Kayla Marie's free newsletter and receive the first 21 chapters of Mended for FREE!</div>	
 	</div>
   </div>
   
-  <div class="row" style="padding-top: 60px;">
+  <div class="row">
     <div class="col-xs-12 visible-xs visible-sm"> 
-	  <div style="padding-bottom: 60px;">
-        <div><img src="bookmedium.png" style="margin: auto; display: block; padding-bottom: 20px"/></div>	    
+	  <div style="padding-bottom: 40px;">
+        <div><img src="booklarge.png" style="margin: auto; display: block; padding-bottom: 20px"/></div>
+        <div style="text-align: center;"><img src="stars.jpg"/></div>		
 	  </div>
     </div>	
 	<div class="col-xs-2 hidden-xs hidden-sm">
 	</div>
 	<div class="col-xs-5 hidden-xs hidden-sm">
 	  <div>
-	    <div style="text-align: center; font-size: 2vw; color: #0f4680;">
+	    <div style="text-align: center; font-size: 2.8vw; color: #0f4680;">
 	      Subscribe to Kayla Marie's free newsletter and receive the first 21 chapters of Mended for FREE!
 	    </div>
-		<div style="text-align: center; font-size: 2vw; color: #68b04d; padding-top: 40px;">
+		<div style="text-align: center; font-size: 2.3vw; color: #68b04d; padding-top: 40px;">
 	      That's more than 150 pages of 100% FREE content
 	    </div>
 	    <div style="text-align: center; font-size: 2vw; color: #668b04d; padding-top: 40px;">
 	      The 2017 Indie Reader Discovery Awards Judges say:
 	    </div>
-		<div style="text-align: center; font-size: 1.5vw; color: #484d56; padding-top: 40px;">
+		<div style="text-align: center; font-size: 1.3em; color: #484d56; padding-top: 40px;">
 	      "Beautifully written by Kayla Marie, MENDED offers much more than romance: the message that self-redemption is possible through the kindness and honesty of those who truly love us."
 	    </div>
 		<div style="text-align: center; padding-top: 10px; padding-bottom: 40px"><img src="stars.jpg"/></div>
@@ -225,17 +225,15 @@
 	</div>
 	<div class="col-xs-3 hidden-xs hidden-sm">
 	  <div style="padding-right: 8%; padding-bottom: 60px">
-        <div><img src="bookmedium.png" style="margin: auto; display: block; padding-bottom: 20px;"/></div>	    
+        <div><img src="booklarge.png" style="margin: auto; display: block; padding-bottom: 20px;"/></div>	    
 	  </div>
     </div>
 	<div class="col-xs-2 hidden-xs hidden-sm">
 	</div>
   </div>
-  <div class="row">
-    <div class="col-xs-2">
-	</div>
-    <div class="col-xs-8">
-      <div id="mc_embed_signup" style="background-color: #ecf0f1; margin: auto; color: black; text-align: center; padding-top: 20px; border: medium solid #AAAAAA; min-width: 200px">
+  <div class="row">    
+    <div class="col-xs-12">
+      <div id="mc_embed_signup" style="background-color: #ecf0f1; margin: auto; color: black; text-align: center; padding-top: 20px; border: medium solid #AAAAAA; min-width: 200px; max-width: 800px">
 	    <span style="color: #931111; text-align: center; font-size: 2em; padding-left: 10px; padding-right: 10px;">Enter your valid email address to receive your free sample</span>
         <form action="https://kaylamariebooks.us14.list-manage.com/subscribe/post?u=182eba74522c5f5cc6f02235b&amp;id=5da4b4408a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">	
@@ -259,8 +257,18 @@
       </div> 
     </div>	    
   </div>
-  <div class="row" style="padding-top: 20px; padding-bottom: 20px">    
-    <div style="text-align: center; font-size: 1.5em">There are no obligations. You can unsubscribe at any time.<br><br> 
+  <div class="row" style="padding-top: 20px; padding-bottom: 20px">
+    <div class="col-xs-12 visible-xs visible-sm"> 
+	  <div style="padding-bottom: 40px;">
+	    <div style="text-align: center; font-size: 2em; color: #668b04d; padding-top: 40px;">
+	      The 2017 Indie Reader Discovery Awards Judges say:
+	    </div>
+        <div style="text-align: center; font-size: 1.3em; color: #484d56; padding-top: 40px;">
+	      "Beautifully written by Kayla Marie, MENDED offers much more than romance: the message that self-redemption is possible through the kindness and honesty of those who truly love us."
+	    </div>		
+	  </div>
+    </div>  
+    <div class="hidden-xs hidden-sm" style="text-align: center; font-size: 1.5em">There are no obligations. You can unsubscribe at any time.<br><br> 
 Though we hope you'll stick around for a while and see what this talented author has to offer!<br><br>
 <b>Offer Ends Soon!</b></div>	
   </div>
