--- a/downloads.html
+++ b/downloads.html
@@ -174,10 +174,11 @@
     </div>	
     <div>	  
       <div class="collapse navbar-collapse" id="myNavbar">	    
-        <ul class="nav pull-right navbar-nav">
-          <li><a href="index.html#section1">Home</a></li>
-          <li><a href="index.html#section2">Books</a></li>
-          <li><a href="index.html#section3">Writing Diary</a></li>
+        <ul class="nav pull-right navbar-nav">		  
+		  <li><a href="index.html#section1">Home</a></li>
+          <li><a href="index.html#section1a">Books</a></li>
+          <li><a href="index.html#section2">Writing Diary</a></li>
+		  <li><a href="index.html#section3">About Me</a></li>
 		  <li><a>Downloads</a></li>
 		  <li><a href="index.html#section4">Contact</a></li>
         </ul>
