--- a/specialoffer.html
+++ b/specialoffer.html
@@ -177,9 +177,10 @@
       <div class="collapse navbar-collapse" id="myNavbar">	    
         <ul class="nav pull-right navbar-nav">
           <li><a href="index.html#section1">Home</a></li>
-          <li><a href="index.html#section2">Books</a></li>
-          <li><a href="index.html#section3">Writing Diary</a></li>
-		  <li><a>Downloads</a></li>
+          <li><a href="index.html#section1a">Books</a></li>
+          <li><a href="index.html#section2">Writing Diary</a></li>
+		  <li><a href="index.html#section3">About Me</a></li>
+		  <li><a href="downloads.html">Downloads</a></li>
 		  <li><a href="index.html#section4">Contact</a></li>
         </ul>
       </div>
