Fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 	    <hr style="padding-top: 0px; width: 60%; max-width: 750px; color: #387fbb; height: 1px; background-color: #387fbb; border-width:0;" />
       </div>
 	  <div style="color: white; text-align: center; font-size: 1.5em; line-height: 1em;">Welcome to Kayla Marie's Writing Diary! Here you will find free sneak peeks</div>
-	  <div style="color: white; text-align: center; font-size: 1.5em; line-height: 1em; padding-bottom: 40px">and sample chapters of her books, exciting news, and annoucements!</div>
+	  <div style="color: white; text-align: center; font-size: 1.5em; line-height: 1em; padding-bottom: 40px">and sample chapters of her books, exciting news, and announcements!</div>
 	</div>
   </div>
   
