changed survivor text

--- a/survivor.html
+++ b/survivor.html
@@ -215,11 +215,11 @@
 	      <i>Can love heal all wounds?<br>Or do some scars never fade?</i><br><br>
 	    </div>
 		<div style="text-align: center; font-size: 1.2vw; color: #484d56">
-	      After a tragic accident took everything from her, Avery is left broken and struggling to find her place in the world again. She goes through the motions, carrying on for the people who love her, but her tormented heart longs for the life she lost.<br><br>
-		  Her future seems bleak until the handsome mechanic and ladies man, Reid charms his way into her life. Though he screams trouble, he sparks something inside her that’s too tempting to ignore: the desire to live.<br><br>
+	      After a tragic accident took everything from her, Avery is left broken, struggling to find her place in the world again. Now back home in Mason, Alabama, she goes through the motions, carrying on for the people who love her yet longing for the life she lost.<br><br>
+		  Her future seems bleak until Reid, a handsome mechanic and ladies’ man, charms his way into her life. Though he screams trouble, he sparks something inside her too tempting to ignore: the desire to live.<br><br>
 	    </div>
 		<div style="text-align: center; font-size: 1.2vw; color: #484d56">
-	      Reid is tired of meaningless flings and one night stands, but after an experience that left him with major trust issues, anything more is beyond his reach.<br><br>But when the enticing and mysterious new bartender, Avery awakens emotions he never thought possible, Reid has to decide if she’s a chance worth taking or if some risks are better left avoided.<br><br>
+	      Reid is tired of meaningless flings and one-night stands, but after betrayal left him with major trust issues, anything more is beyond his reach.<br><br>When Avery, the enticing and mysterious new bartender in town, awakens emotions he never thought possible, Reid has to decide if she’s a chance worth taking or if some risks are better left avoided.<br><br>
 	    </div>		
 		<div style="text-align: center; font-size: 2vw; color: #2b6cb7">
 	      <i>Will love be their second chance?</i><br>
