missed some punctuation

--- a/survivor.html
+++ b/survivor.html
@@ -212,7 +212,7 @@
 	<div class="col-xs-5 hidden-xs hidden-sm">
 	  <div>
 	    <div style="text-align: center; font-size: 2vw; color: #2b6cb7">
-	      <i>Can love heal all wounds?<br>Or do some scars never fade?</i><br><br>
+	      <i>Can love heal all wounds,<br>or do some scars never fade?</i><br><br>
 	    </div>
 		<div style="text-align: center; font-size: 1.2vw; color: #484d56">
 	      After a tragic accident took everything from her, Avery is left broken, struggling to find her place in the world again. Now back home in Mason, Alabama, she goes through the motions, carrying on for the people who love her yet longing for the life she lost.<br><br>
@@ -222,8 +222,8 @@
 	      Reid is tired of meaningless flings and one-night stands, but after betrayal left him with major trust issues, anything more is beyond his reach.<br><br>When Avery, the enticing and mysterious new bartender in town, awakens emotions he never thought possible, Reid has to decide if she’s a chance worth taking or if some risks are better left avoided.<br><br>
 	    </div>		
 		<div style="text-align: center; font-size: 2vw; color: #2b6cb7">
-	      <i>Will love be their second chance?</i><br>
-		  <i>Or will the past consume their future?</i><br><br>
+	      <i>Will love be their second chance,</i><br>
+		  <i>or will the past consume their future?</i><br><br>
 	    </div>		
 	  </div>
 	</div>	
