updated survivor book link

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 	  <div style="padding-bottom: 60px;">
 	    <div style="text-align: center; font-size: 1.3em; color: #484d56; padding-bottom: 10px">Book 2</div>
         <div><img src="survivorlarge.jpg" style="margin: auto; display: block; padding-bottom: 20px"/></div>
-	    <div><button type="button" class="btn btn-xlarge" style="margin: auto; display: block; color: black">Coming Nov. 7, 2017</button></div>
+	    <div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/dp/B075FXRJQ9'">Get it Now</button></div>		
 	  </div>
     </div>
 	<div class="col-xs-12 visible-xs visible-sm"> 
@@ -267,7 +267,7 @@
     <div class="col-xs-4 hidden-xs hidden-sm">
 	   <div style="text-align: center; font-size: 1.3em; color: #484d56; padding-bottom: 10px">Book 2</div>
        <div><a href="survivor.html"><img src="survivorlarge.jpg" style="margin: auto; display: block; padding-bottom: 20px; width: 284px;"/></a></div>
-	   <div><button type="button" class="btn btn-xlarge" style="margin: auto; display: block; color: black">Coming Nov. 7, 2017</button></div>
+	   <div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/dp/B075FXRJQ9'">Get it Now</button></div>		
     </div>
     <div class="col-xs-4 hidden-xs hidden-sm"> 
 	   <div style="text-align: center; font-size: 1.3em; color: #484d56; padding-bottom: 10px">Book 3</div>
@@ -285,7 +285,7 @@
 	    <hr style="padding-top: 0px; width: 60%; max-width: 750px; color: #387fbb; height: 1px; background-color: #387fbb; border-width:0;" />
       </div>
 	  <div style="color: white; text-align: center; font-size: 1.5em; line-height: 1em;">Welcome to Kayla Marie's Writing Diary! Here you will find free sneak peeks</div>
-	  <div style="color: white; text-align: center; font-size: 1.5em; line-height: 1em; padding-bottom: 40px">and sample chapters of her books, exciting news, and announcements!</div>
+	  <div style="color: white; text-align: center; font-size: 1.5em; line-height: 1em; padding-bottom: 40px">and sample chapters of her books, exciting news, and annoucements!</div>
 	</div>
   </div>
   
