--- a/survivor.html
+++ b/survivor.html
@@ -195,9 +195,7 @@
 	  <div style="padding-bottom: 40px;">
 	    <div style="text-align: center; font-size: 1.3em; color: #484d56; padding-bottom: 10px">Sweet Home Dixie Book 2</div>	    
         <div><img src="survivorlarge.jpg" style="margin: auto; display: block; padding-bottom: 20px"/></div>
-		<div style="text-align: center; font-size: 1.5em; color: #931111;">
-	      <b>Available November 7, 2017</b>
-	    </div>
+		<div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/dp/B075FXRJQ9'">Buy on Amazon</button></div>		
 	  </div>
     </div>	
 	<div class="col-xs-2 hidden-xs hidden-sm">
@@ -205,9 +203,7 @@
 	<div class="col-xs-3 hidden-xs hidden-sm" style="min-width: 315px">
 	    <div style="text-align: center; font-size: 1.3em; color: #484d56; padding-bottom: 10px">Sweet Home Dixie Book 2</div>	    
         <div><img src="survivorlarge.jpg" style="margin: auto; display: block; padding-bottom: 20px;"/></div>        
-		<div style="text-align: center; font-size: 1.5em; color: #931111">
-	      <b>Available November 7, 2017</b>
-	    </div>
+		<div><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/dp/B075FXRJQ9'">Buy on Amazon</button></div>		
     </div>
 	<div class="col-xs-5 hidden-xs hidden-sm">
 	  <div>
