layout fixes and removed non used special offer

--- a/mended.html
+++ b/mended.html
@@ -190,14 +190,7 @@
 
 <div class="container-fluid">
 
-  <div class="row" style="padding-top: 120px;"/>    
-    <!--<div class="col-xs-12 visible-xs visible-sm" >  
-	</div>
-	<div class="col-xs-12 visible-xs visible-sm">  
-       <div style="text-align: center; font-size: 2em; color: #0f4680; padding-bottom: 60px">Subscribe to Kayla Marie's free newsletter and receive the first 21 chapters of Mended for FREE!</div>	
-	</div>
-  </div>-->
-  
+  <div class="row" style="padding-top: 120px;"/>  
   <div class="row">
     <div class="col-xs-12 visible-xs visible-sm"> 
 	  <div style="padding-bottom: 40px;">
@@ -238,7 +231,7 @@
 		<div style="text-align: center; font-size: 1.2vw; color: #484d56">
 	      Witty and heartfelt with just enough suspense and sizzle,<br><i>Mended</i> is a story of hope amoungst tragedy and love's amazing ability to heal the deepest wounds.<br><br>
 	    </div>		
-		<div style="text-align: center; padding-top: 10px; padding-bottom: 40px"><img src="award.png" width="200px" height="200px"/></div>
+		<div style="text-align: center; padding-top: 10px; padding-bottom: 40px"><img style="margin-right: 5px" src="award.png" width="200px" height="200px"/><img style="margin-left: 5px" src="award2.png" width="200px" height="200px"/></div>
 	  </div>
 	</div>	
 	<div class="col-xs-2 hidden-xs hidden-sm">
