--- a/downloads.html
+++ b/downloads.html
@@ -188,24 +188,36 @@
 </nav>
 
 <div class="container-fluid">
-  <div class="row hidden-xs hidden-sm" style="padding-top: 100px;">
-    <div class="col-xs-6">
-	  <a style="float: right" href="https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/"><img src="mended3d.jpg" style="max-width:600px;max-height:600px;"/></a>
+  <div class="row" style="padding-top: 150px">
+     <div class="col-xs-12">
+       <div class="caption">
+         <h1 style="font-size: 2em; color: #484d56;">Click on a cover to read a free sample</h1>
+	   </div>
+	 </div>
+  </div>
+</div>
+
+<div class="container-fluid">  
+  <div class="row hidden-xs hidden-sm" style="padding-top: 130px;">
+    <div class="col-xs-6">	  
+	  <div style="float: right; margin-right: 30px">
+	     <a href="MendedSample.pdf"><img src="booklarge.png" style="max-width:600px;max-height:600px;padding-bottom:20px"/></a>
+	     <button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/B01N7FP9MH/'">Buy on Amazon</button>
+	  </div>		
 	</div>
-	<div class="col-xs-6" style="height: 600px">
-	  <div style="height: 180px"></div>
-	  <a style="color: #931111; font-size: 3em" href="sneakpeek.pdf">Click <span style="text-decoration: underline"><b>here</b></span> to download<br>your FREE sneak<br>peek of Mended</a>
-	  <div style="padding-top: 40px; padding-left: 60px;"><button type="button" class="btn btn-xlarge btn-primary" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Buy on Amazon</button></div>
+	<div class="col-xs-6">
+	  <div style="float: left; margin-left: 30px">
+	     <a href="SurvivorSample.pdf"><img src="survivorlarge.jpg" style="max-width:600px;max-height:600px;padding-bottom:20px"/></a>
+	     <button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/dp/B075FXRJQ9'">Buy on Amazon</button>
+	  </div>	  
 	</div>
   </div>
   <div class="row visible-xs visible-sm" style="padding-top: 100px;">
-    <div><a href="https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/"><img src="mended3d.jpg" style="max-width:600px;max-height:600px;margin: auto; display: block;"/></a></div>
-	<div style="text-align: center"><a style="color: #931111; font-size: 3em;" href="sneakpeek.pdf">Click <span style="text-decoration: underline"><b>here</b></span> to download<br>your FREE sneak<br>peek of Mended</a></div>
-    <div style="padding-top: 40px;"><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Buy on Amazon</button></div>
-  </div>
-  <div class="row" style="padding-top: 100px;">    
-    <div style="text-align: center; font-size: 3em">Thanks for visiting!</div>	
-  </div>
+    <div><a href="MendedSample.pdf"><img src="booklarge.png" style="max-width:600px;max-height:600px;margin: auto; display: block;"/></a></div>	
+    <div style="padding-top: 20px; padding-bottom: 80px"><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/Mended-Sweet-Home-Dixie-Novel/dp/069280367X/'">Buy on Amazon</button></div>
+	<div><a href="SurvivorSample.pdf"><img src="survivorlarge.jpg" style="max-width:600px;max-height:600px;margin: auto; display: block;"/></a></div>	
+    <div style="padding-top: 20px; padding-bottom: 80px"><button type="button" class="btn btn-xlarge btn-primary" style="margin: auto; display: block;" onclick="window.location='https://www.amazon.com/dp/B075FXRJQ9'">Buy on Amazon</button></div>
+  </div>  
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
